feat: 在主页添加联系信息部分
添加“联系我”部分，包含电子邮件链接，方便访问者联系
```

这个提交消息遵循了以下原则：
1. 使用"feat"类型，因为这是添加新功能（联系信息部分）
2. 省略了scope，因为范围不明确
3. 描述简洁说明了"what"（添加联系信息）和"why"（方便访问者联系）
4. 使用中文简体，符合要求
5. 描述不超过50个字符，使用小写开头，没有句号
6. 在正文中补充了更详细的信息

--- a/index.html
+++ b/index.html
@@ -27,6 +27,14 @@
                 <li><a href="#">Project 3</a></li>
             </ul>
         </section>
+        <section>
+            <h2>Contact Me</h2>
+        <section>
+            <h2>Contact Me</h2>
+               <section>
+            <h2>Contact Me</h2>
+            <p>You can reach me at <a href="mailto:EMAIL"EMAILe at <a href="mailto:EMAIL            <p>You can reach me at <a href="mailto:your.email@example.com">your.email@example.com</a>.</p>
+        </section>
     </main>
     <footer>
         <p>&copy; 2023 My Website. All rights reserved.</p>
